refactor(runtime): store procedure state
